fix spacing, add fix styles first child of chats

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -130,8 +130,11 @@ hr {
 }
 
 .chats .user {
-  padding: 0.5rem 1rem;
+  padding: 0.75rem 1rem;
   cursor: pointer;
+}
+.chats .user:first-child{
+  margin-top: -0.75rem;
 }
 
 .chats .user-avatar{
